projects functionality is added and horizontal scrolling issue is solved in my new portfolio website

--- a/projects/portfolio_using_HTML_JS_CSS/style.css
+++ b/projects/portfolio_using_HTML_JS_CSS/style.css
@@ -13,7 +13,7 @@ html{
 }
 body{
     font-family: 'Montserrat', sans-serif;
-    padding-top: 5rem;
+    
 }
 a{
     text-decoration: none;
@@ -27,15 +27,14 @@ ul{
 /* ======================== utility classes ==================== */
 
 .container{
-    display: flex;
+    /* display: flex; */
     max-width: 1200px;
     width: 90%;
     margin: 0 auto;
     /* padding-top: 5rem; */
+    
 }
-.main-content-container{
-    display: flex;
-}
+
 
 
 
@@ -48,7 +47,7 @@ ul{
     height: 100vh;
     text-align: center;
     position: fixed;
-    
+    padding-top: 5rem;
     
 }
 .sidebar img{
@@ -56,6 +55,7 @@ ul{
     height: 20rem;
     margin: 0 auto;
     border-radius: 50%;
+    
 }
 .name{
     font-size: 2.2rem;
@@ -93,11 +93,8 @@ ul{
 .main-content{
     /* border: 3px solid black; */
     width: 75%;
-    /* overflow: scroll; */
-
-    /* line-height: 300px; */
     margin-left: 25%;
-
+    padding-top: 5rem;
 }
 
 
@@ -111,7 +108,7 @@ ul{
     height: 95vh;
     position: relative;
     transition: all 0.4s ease-in-out;
-    width: 100%;
+    
 }
 .second-intro{
     background: linear-gradient(rgba(0,0,0, 0.45), rgba(0, 0, 0, 0.059));
@@ -379,7 +376,7 @@ ul{
 
 .experience-content{
     padding-left: 5rem;
-    margin: 20rem 0;
+    margin: 10rem 0;
 }
 
 .experience-content h2{
@@ -418,28 +415,25 @@ ul{
     height: 5rem;
     border-left: 5px solid rgba(0, 0, 0, 0.400);
     border-radius: 5px solid rgba(0, 0, 0, 0.400);
-    transform: translate(51%, 0);
-    /* border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px; */
-    margin: 1rem auto 0 auto;
+    margin-top: 1rem;
+    margin-left: 51%;
 
 }
 
 .experience-ender{
-    position: relative;
-    top: 0%;
-    left: 50%;
     font-size: 5rem;
-    transform: translate(-1%, 0%);
     font-weight: 600;
     height: 20rem;
+    width: 100%;
+    text-align: center;
 }
+
 .coming-more{
     margin-left: 2rem;
     text-align: center;
-    /* margin-bottom: 1rem; */
     
 }
+
 .coming-more .coming{
     border: 1px solid black;
     width: 30%;
@@ -454,17 +448,182 @@ ul{
     font-size: 2rem;
     
 }
+
 .circle{
     margin: 0 auto 1rem auto;
     width: 20px;
     height: 20px;
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+    /* border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%; */
+    border-radius: 50%;
     border: 4px solid rgba(0, 0, 0, 0.400);
     transform: translate(50%, 0);
-    border-top: none;
+    /* border-top: none; */
     /* background: rgba(0, 0, 0, 0.400); */
     
+}
+
+
+
+
+
+
+
+
+
+/* ======================== project section styling ==================== */
+
+.projects-content{
+    padding-left: 5rem;
+    margin: 10rem 0;
+}
+.projects-content h2{
+    font-size: 2.2rem;
+    text-transform: capitalize;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: 0.6rem;
+    padding-bottom: 8rem;
+}
+.project-boxes{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.project-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 35rem;
+    margin-bottom: 3rem;
+}
+.box{
+    border: 2px solid black;
+    width: 45%;
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)) ,url('./img/home2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    /* background-color: black; */
+    text-align: center;
+    height: 100%;
+    position: relative;
+
+}
+.box1{
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)) ,url('./img/home1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
+}
+.box-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 0;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+/* .left-box-text{
+    left: -100%;
+}
+.right-box-text{
+    right: -100%;
+}
+.left-box:hover .left-box-text{
+    left: 0%;
+    z-index: 5;
+    opacity: 1;
+}
+.right-box:hover .right-box-text{
+    right: 0%;
+    z-index: 5;
+    opacity: 1;
+} */
+.box-text{
+    top: -50%;
+}
+.box:hover .box-text{
+    top: 0%;
+    z-index: 5;
+    opacity: 1;
+}
+.box .project-title{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 500;
+   
+}
+.project-buttons button{
+    width: 35%;
+    height: 4rem;
+    margin: 1rem;
+    font-size: 1.8rem;
+    font-weight: 500;
+    cursor: pointer;
+    background: red;
+    color: white;
+    outline: none;
+    border: none;
+    transition: all 0.3s ease-in-out;
+    border-radius: 10px;
+}
+.project-buttons button:hover{
+    background: black;
+    color: white;
+    border: 2px solid white;
+}
+.box .know-more{
+    width: 70%;
+    text-align: center;
+    height: 4rem;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+    margin-left: 15%;
+    background: black;
+    color: white;
+    outline: none;
+    border: 2px solid white;
+    border-radius: 10px;
+    transition: all 0.3s ease-in-out;
+}
+.box .know-more:hover{
+    background: red;
+    color: white;
+    border-radius: 10px;
+}
+.project-row .box::after{
+    content: "hello";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.489);
+    opacity: 0;
+    z-index: 1;
+    transition: all 0.5s ease-in-out;
+}
+.project-row .box:hover::after{
+    background-color: rgba(0, 0, 0, 0.803);
+    opacity: 1;
+    z-index: 2;
+}
+.project-title-onimage{
+    color: white;
+    font-size: 3rem;
+    font-weight: 500;
+    padding: 2rem;
+    text-transform: uppercase;
+}
+.project-description{
+    font-size: 2rem;
+    line-height: 3rem;
+    padding: 3rem 1rem 2rem 1rem;
+    color: wheat;
 }
 
 
